--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://postgresgallery.netlify.com/"
 languageCode = "en-us"
 title = "PostgreSQL Gallery"
 theme = "ananke"
