--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,5 @@ baseURL = "http://postgresgallery.netlify.com/"
 languageCode = "en-us"
 title = "PostgreSQL Gallery"
 theme = "ananke"
+[params]
+    custom_css = ["css/code-overflow.css"]
