--- a/config.toml
+++ b/config.toml
@@ -4,3 +4,6 @@ title = "PostgreSQL Gallery"
 theme = "ananke"
 [params]
     custom_css = ["css/code-overflow.css"]
+    # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+ background_color_class = "bg-white"
+ featured_image = "images/hero.png"
