--- a/config.toml
+++ b/config.toml
@@ -6,4 +6,4 @@ theme = "ananke"
     custom_css = ["css/code-overflow.css"]
     # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
  background_color_class = "bg-white"
- featured_image = "images/hero.png"
+ featured_image = "images/gohugo-default-sample-hero-image.png"
